[gd_scene load_steps=8 format=3 uid="uid://btf450usnug7x"]

[ext_resource type="Script" path="res://Scripts/ScriptGenerales/statSelect.gd" id="1_uk04j"]
[ext_resource type="Texture2D" uid="uid://b5kvkxxxfec8l" path="res://Assets/Menus/UI Package/Windows/2-3.png" id="2_8njin"]
[ext_resource type="FontFile" uid="uid://b4giw5b8c2ag0" path="res://Assets/Fonts/Pixeled.ttf" id="3_ymli3"]
[ext_resource type="Texture2D" uid="uid://bi4t8agyfs8mj" path="res://Assets/Menus/UI Package/Elements/1-2.png" id="4_x5fqe"]
[ext_resource type="Texture2D" uid="uid://nu26iew5fbm2" path="res://Assets/Menus/UI Package/Elements/1-3.png" id="5_h662d"]
[ext_resource type="Texture2D" uid="uid://ty3svchwcl11" path="res://Assets/Menus/UI Package/Elements/1-1.png" id="6_iymhp"]
[ext_resource type="AudioStream" uid="uid://blbivdegy7x36" path="res://Assets/Sounds and Music/multi-pop-1-188165.mp3" id="7_4ryed"]

[node name="StatSelect" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_uk04j")

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0.313726)
texture_filter = 1
offset_left = -29.0
offset_top = -11.0
offset_right = 1957.0
offset_bottom = 1108.0
color = Color(0, 0, 0, 1)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(969, 512)
scale = Vector2(1.5, 1)
texture = ExtResource("2_8njin")

[node name="RegenStamina" type="Label" parent="."]
texture_filter = 1
anchors_preset = -1
anchor_left = 0.149998
anchor_top = -0.125
anchor_right = 0.149998
anchor_bottom = -0.125
offset_left = 531.004
offset_top = 427.0
offset_right = 855.004
offset_bottom = 511.0
scale = Vector2(1.3, 1.3)
theme_override_fonts/font = ExtResource("3_ymli3")
theme_override_font_sizes/font_size = 10
text = "Regen Stamina + 0.2"
metadata/_edit_use_anchors_ = true

[node name="RegenStamina" type="TextureButton" parent="RegenStamina"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 1.65
anchor_right = 1.65
offset_left = -343.831
offset_top = 3.07689
offset_right = -303.831
offset_bottom = 43.0769
texture_normal = ExtResource("4_x5fqe")
texture_pressed = ExtResource("5_h662d")
texture_hover = ExtResource("6_iymhp")

[node name="Label" type="Label" parent="RegenStamina/RegenStamina"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = -12.9674
anchor_top = -11.0019
anchor_right = -12.9674
anchor_bottom = -11.0019
offset_left = 531.004
offset_top = 427.0
offset_right = 855.004
offset_bottom = 511.0
theme_override_fonts/font = ExtResource("3_ymli3")
theme_override_font_sizes/font_size = 20
text = "+"
metadata/_edit_use_anchors_ = true

[node name="Damage" type="Label" parent="."]
texture_filter = 1
anchors_preset = -1
anchor_left = 0.149998
anchor_top = -0.125
anchor_right = 0.149998
anchor_bottom = -0.119
offset_left = 531.004
offset_top = 517.0
offset_right = 698.004
offset_bottom = 601.0
scale = Vector2(1.3, 1.3)
theme_override_fonts/font = ExtResource("3_ymli3")
theme_override_font_sizes/font_size = 10
text = "Damage + 0.5"
metadata/_edit_use_anchors_ = true

[node name="Damage" type="TextureButton" parent="Damage"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 1.65
anchor_right = 1.65
offset_left = -84.7808
offset_top = 3.07687
offset_right = -44.7807
offset_bottom = 43.0769
texture_normal = ExtResource("4_x5fqe")
texture_pressed = ExtResource("5_h662d")
texture_hover = ExtResource("6_iymhp")

[node name="Label" type="Label" parent="Damage/Damage"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = -12.9674
anchor_top = -11.0019
anchor_right = -12.9674
anchor_bottom = -11.0019
offset_left = 531.004
offset_top = 427.0
offset_right = 855.004
offset_bottom = 511.0
theme_override_fonts/font = ExtResource("3_ymli3")
theme_override_font_sizes/font_size = 20
text = "+"
metadata/_edit_use_anchors_ = true

[node name="MaxLife" type="Label" parent="."]
texture_filter = 1
anchors_preset = -1
anchor_left = 0.149998
anchor_top = -0.125
anchor_right = 0.149998
anchor_bottom = -0.125
offset_left = 531.004
offset_top = 607.0
offset_right = 725.004
offset_bottom = 691.0
scale = Vector2(1.3, 1.3)
theme_override_fonts/font = ExtResource("3_ymli3")
theme_override_font_sizes/font_size = 10
text = "Max Life + 7"
metadata/_edit_use_anchors_ = true

[node name="MaxLife" type="TextureButton" parent="MaxLife"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 1.65
anchor_right = 1.65
offset_left = -129.331
offset_top = 3.07689
offset_right = -89.3308
offset_bottom = 43.0769
texture_normal = ExtResource("4_x5fqe")
texture_pressed = ExtResource("5_h662d")
texture_hover = ExtResource("6_iymhp")

[node name="Label" type="Label" parent="MaxLife/MaxLife"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = -12.9674
anchor_top = -11.0019
anchor_right = -12.9674
anchor_bottom = -11.0019
offset_left = 531.004
offset_top = 427.0
offset_right = 855.004
offset_bottom = 511.0
theme_override_fonts/font = ExtResource("3_ymli3")
theme_override_font_sizes/font_size = 20
text = "+"
metadata/_edit_use_anchors_ = true

[node name="MaxStamina" type="Label" parent="."]
texture_filter = 1
anchors_preset = -1
anchor_left = 0.149998
anchor_top = -0.125
anchor_right = 0.149998
anchor_bottom = -0.125
offset_left = 531.004
offset_top = 697.0
offset_right = 811.004
offset_bottom = 781.0
scale = Vector2(1.3, 1.3)
theme_override_fonts/font = ExtResource("3_ymli3")
theme_override_font_sizes/font_size = 10
text = "Max Stamina + 75"
metadata/_edit_use_anchors_ = true

[node name="MaxStamina" type="TextureButton" parent="MaxStamina"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 1.65
anchor_right = 1.65
offset_left = -271.231
offset_top = 3.07686
offset_right = -231.231
offset_bottom = 43.0769
texture_normal = ExtResource("4_x5fqe")
texture_pressed = ExtResource("5_h662d")
texture_hover = ExtResource("6_iymhp")

[node name="Label" type="Label" parent="MaxStamina/MaxStamina"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = -12.9674
anchor_top = -11.0019
anchor_right = -12.9674
anchor_bottom = -11.0019
offset_left = 531.004
offset_top = 427.0
offset_right = 855.004
offset_bottom = 511.0
theme_override_fonts/font = ExtResource("3_ymli3")
theme_override_font_sizes/font_size = 20
text = "+"
metadata/_edit_use_anchors_ = true

[node name="SwordTime" type="Label" parent="."]
texture_filter = 1
anchors_preset = -1
anchor_left = 0.149998
anchor_top = -0.125
anchor_right = 0.149998
anchor_bottom = -0.125
offset_left = 531.004
offset_top = 787.0
offset_right = 875.004
offset_bottom = 871.0
scale = Vector2(1.3, 1.3)
theme_override_fonts/font = ExtResource("3_ymli3")
theme_override_font_sizes/font_size = 10
text = "Max SwordTime + 10s"
metadata/_edit_use_anchors_ = true

[node name="SwordTime" type="TextureButton" parent="SwordTime"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 1.65
anchor_right = 1.65
offset_left = -376.831
offset_top = 3.0769
offset_right = -336.831
offset_bottom = 43.0769
texture_normal = ExtResource("4_x5fqe")
texture_pressed = ExtResource("5_h662d")
texture_hover = ExtResource("6_iymhp")

[node name="Label" type="Label" parent="SwordTime/SwordTime"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = -12.9674
anchor_top = -11.0019
anchor_right = -12.9674
anchor_bottom = -11.0019
offset_left = 531.004
offset_top = 427.0
offset_right = 855.004
offset_bottom = 511.0
theme_override_fonts/font = ExtResource("3_ymli3")
theme_override_font_sizes/font_size = 20
text = "+"
metadata/_edit_use_anchors_ = true

[node name="SFXButtons" type="AudioStreamPlayer2D" parent="."]
texture_filter = 1
stream = ExtResource("7_4ryed")
max_polyphony = 5
bus = &"SFX"

[connection signal="mouse_entered" from="RegenStamina/RegenStamina" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="RegenStamina/RegenStamina" to="." method="_on_regen_stamina_pressed"]
[connection signal="mouse_entered" from="Damage/Damage" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Damage/Damage" to="." method="_on_damage_pressed"]
[connection signal="mouse_entered" from="MaxLife/MaxLife" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="MaxLife/MaxLife" to="." method="_on_max_life_pressed"]
[connection signal="mouse_entered" from="MaxStamina/MaxStamina" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="MaxStamina/MaxStamina" to="." method="_on_max_stamina_pressed"]
[connection signal="mouse_entered" from="SwordTime/SwordTime" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="SwordTime/SwordTime" to="." method="_on_sword_time_pressed"]
